# perchance-tools

./: .gitignore  README.md  api-reference.html  code-of-conduct.html  contributing.html  genindex.html  getting-started.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tox.ini
.github/workflows/: build-documentation.yml  multiple-test-suite.yml  single-test-suite.yml
_modules/: index.html
_modules/danoan/perchance_tools/: cli.html
_modules/danoan/perchance_tools/commands/: convert_to_perchance_format.html  correct_words.html  list_categories.html  markdown_to_yml.html
_modules/danoan/perchance_tools/core/: api.html  exception.html  model.html  utils.html
_sources/: api-reference.rst.txt  getting-started.md.txt  index.rst.txt
_sources/reference/: danoan.perchance_tools.assets.prompts.rst.txt  danoan.perchance_tools.assets.rst.txt  danoan.perchance_tools.cli.rst.txt  danoan.perchance_tools.commands.convert_to_perchance_format.rst.txt  danoan.perchance_tools.commands.correct_words.rst.txt  danoan.perchance_tools.commands.list_categories.rst.txt  danoan.perchance_tools.commands.markdown_to_yml.rst.txt  danoan.perchance_tools.commands.rst.txt  danoan.perchance_tools.core.api.rst.txt  danoan.perchance_tools.core.exception.rst.txt  danoan.perchance_tools.core.model.rst.txt  danoan.perchance_tools.core.rst.txt  danoan.perchance_tools.core.utils.rst.txt  danoan.perchance_tools.rst.txt  danoan.rst.txt
dev/create-venv/: create-venv.sh
docs/: conf.py  getting-started.md  requirements.txt
examples/convert-to-perchance-format/: convert-to-perchance-format.sh
examples/correct-words/: correct-words.sh
examples/correct-words/input/: chunk.yml
examples/markdown-to-yml/: markdown-to-yml.sh
examples/markdown-to-yml/input/: chunk.md
reference/: danoan.html  danoan.perchance_tools.assets.html  danoan.perchance_tools.assets.prompts.html  danoan.perchance_tools.cli.html  danoan.perchance_tools.commands.convert_to_perchance_format.html  danoan.perchance_tools.commands.correct_words.html  danoan.perchance_tools.commands.html  danoan.perchance_tools.commands.list_categories.html  danoan.perchance_tools.commands.markdown_to_yml.html  danoan.perchance_tools.core.api.html  danoan.perchance_tools.core.exception.html  danoan.perchance_tools.core.html  danoan.perchance_tools.core.model.html  danoan.perchance_tools.core.utils.html  danoan.perchance_tools.html
src/danoan/perchance_tools/: cli.py
src/danoan/perchance_tools/commands/: convert_to_perchance_format.py  correct_words.py  list_categories.py  markdown_to_yml.py
src/danoan/perchance_tools/core/: api.py  exception.py  model.py  utils.py
test/: conftest.py  run-doc-test.sh
test/core/: test_api.py  test_utils.py
test/core/api/: test_api.py
test/core/api/cache/: .cache
test/core/input/: markdown-thesaurus.md
test/core/utils/: test_utils.py
(+12 files in other folders)
